--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typewriter-effect": "2.17.0",
-    "swr": "0.4.1"
+    "swr": "0.4.1",
+    "mongodb": "latest"
   }
 }
