--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "typewriter-effect": "2.17.0",
-    "swr": "0.4.1",
-    "mongodb": "latest"
+    "mongodb": "latest",
+    "prism-react-renderer": "latest"
   }
 }
