--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "mongodb": "latest",
-    "prism-react-renderer": "latest"
+    "prism-react-renderer": "latest",
+    "styled-components": "latest"
   }
 }
